# src/main/java/com/cloud/galactic/catalog/service/entity/Unit.java
@@ -8,7 +8,7 @@ import javax.persistence.*;
 import java.io.Serializable;
 
 /**
- * Bundle
+ * Unit
  */
 
 @Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2023-01-10T12:35:24.313769100+07:00[Asia/Saigon]")
@@ -19,23 +19,21 @@ import java.io.Serializable;
 @Setter
 @NoArgsConstructor
 @ToString
-@Table(name = "bundle")
+@Table(name = "unit")
 @Entity
-public class Bundle implements Serializable {
+public class Unit implements Serializable {
 
   @Id
   @GeneratedValue(generator = "my_generator")
-  @GenericGenerator(name = "my_generator", strategy = "com.cloud.galactic.catalog.service.generator.GeneratorBundle")
+  @GenericGenerator(name = "my_generator", strategy = "com.cloud.galactic.catalog.service.generator.GeneratorUnit")
   @Column(name = "id")
   private String id;
-
-  @Column(name = "nameGroup", columnDefinition = "text")
-  private String nameGroup;
 
   @Column(name = "name", columnDefinition = "text")
   private String name;
 
-  @Column(name = "status", columnDefinition = "text")
-  private String status;
+  @Column(name = "value")
+  private Integer value;
+
 }
 
